add students list endpoint